# Risk

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gui/qgv/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  QGraphViz.pro  cmake_install.cmake
gui/qgv/MapEditor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  MapEditor.pro  QGraphicsViewEc.cpp  QGraphicsViewEc.h  cmake_install.cmake  moc_MainWindow.cpp  moc_QGraphicsViewEc.cpp  ui_MainWindow.h
gui/qgv/QGVCore/: Makefile  cmake_install.cmake  moc_QGVScene.cpp
gui/qgv/Sample/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_MainWindow.cpp  moc_QGraphicsViewEc.cpp
gui/qgv/cmake/: cmake_uninstall.cmake
gui/qgv/lib/: libQGVCore.so.0  libQGVCore.so.0.1.0
include/catch/: catch.hpp
maps/: Earth.riskmap
src/: Makefile  Makefile.am  Makefile.in  main.cpp
src/.deps/: main.Po
src/bonus/: Makefile  Makefile.am  bonus.h  continent_bonus.cpp  continent_bonus.h  full_continent_bonus.cpp  full_continent_bonus.h  full_continent_bonus_factory.cpp  full_continent_bonus_factory.h  round_bonus.cpp  round_bonus.h  single_appliance_bonus.cpp  single_appliance_bonus.h  territory_bonus.cpp  territory_bonus.h
src/die/: Makefile  Makefile.am  Makefile.in  die.h  die_face.cpp  die_face.h  die_random_engine.cpp  die_random_engine.h  land_attack_attack_die.cpp  land_attack_attack_die.h  land_attack_defense_die.cpp  land_attack_defense_die.h  land_attack_dice_fight.cpp  land_attack_dice_fight.h  land_attack_die_face.cpp  land_attack_die_face.h  land_attack_die_fight.cpp  land_attack_die_fight.h  land_defense_die_face.cpp  land_defense_die_face.h  simple_die.h  six_faces_die.h
src/die/.deps/: die_face.Po  die_random_engine.Po  land_attack_attack_die.Po  land_attack_defense_die.Po  land_attack_dice_fight.Po  land_attack_die_face.Po  land_attack_die_fight.Po  land_defense_die_face.Po
src/domination/: Makefile  Makefile.am  conquerable_map.cpp  conquerable_map.h  conquerable_territory.cpp  conquerable_territory.h  conqueror_player.cpp  conqueror_player.h  empty_territory_state.cpp  empty_territory_state.h  owned_territory_state.cpp  owned_territory_state.h  territory_state.h
src/map/: Makefile  Makefile.am  continent.cpp  continent.h  earth.cpp  earth.h  map.cpp  map.h  map_graph.cpp  map_graph.h  map_parser.cpp  map_parser.h  south_america.cpp  south_america.h  territory.cpp  territory.h
src/map/.deps/: continent.Po  map.Po
src/player/: Makefile  Makefile.am  lobby.cpp  lobby.h  player.cpp  player.h
src/player/.deps/: player.Po
src/utils/: Makefile  Makefile.am  storage.h
test/: .gitignore  Makefile  Makefile.am  Makefile.in  bonus_test.cpp  die_test.cpp  domination_test.cpp  map_parser_test.cpp  map_player_test.cpp  map_test.cpp  player_test.cpp  storage_test.cpp
test/.deps/: die_test.Po  map_test.Po  player_test.Po  run_tests.Po
